# full-chain-membership-proofs

./: Cargo.toml  Luke Parker Full Chain Membership Proofs MoneroKon 2023.pptx  README.md  deny.toml
.github/actions/build-dependencies/: action.yml
.github/actions/test-dependencies/: action.yml
.github/workflows/: monero-tests.yaml  tests.yml
crypto/arithmetic-circuit/: Cargo.toml
crypto/arithmetic-circuit/src/: lib.rs
crypto/bulletproofs-plus/: Cargo.toml  README.md
crypto/bulletproofs-plus/src/: aggregate_range_proof.rs  arithmetic_circuit.rs  arithmetic_circuit_proof.rs  inner_product.rs  lib.rs  point_vector.rs  scalar_matrix.rs  scalar_vector.rs  single_range_proof.rs  weighted_inner_product.rs
crypto/bulletproofs-plus/src/arithmetic_circuit/: constraints.rs  mod.rs
crypto/bulletproofs-plus/src/gadgets/: bit.rs  elliptic_curve.rs  mod.rs  set_membership.rs  set_presence.rs.txt
crypto/bulletproofs-plus/src/gadgets/elliptic_curve/: dlog_pok.rs  mod.rs  trinary.rs
crypto/bulletproofs-plus/src/tests/: aggregate_range_proof.rs  arithmetic_circuit.rs  arithmetic_circuit_proof.rs  inner_product.rs  mod.rs  single_range_proof.rs  vector_commitment.rs  weighted_inner_product.rs
crypto/bulletproofs-plus/src/tests/gadgets/: elliptic_curve.rs  mod.rs
crypto/ciphersuite/: Cargo.toml
crypto/ciphersuite/src/: dalek.rs  ed448.rs  kp256.rs  lib.rs  pasta.rs
crypto/copz-dleq/: Cargo.toml  README.md
crypto/copz-dleq/src/: lib.rs  tests.rs
crypto/curve-trees/: Cargo.toml  README.md
crypto/curve-trees/src/: gadgets.rs  lib.rs  pedersen_hash.rs  permissible.rs  tree.rs
crypto/curve-trees/src/tests/: bench_membership.rs  gadgets.rs  layer.rs  membership.rs  mod.rs  permissible.rs  tree.rs
crypto/ecip/: Cargo.toml  README.md
crypto/ecip/src/: experimental.rs  lib.rs  poly.rs  tests.rs
crypto/ecip/src/tests/: experimental.rs  mod.rs
crypto/multiexp/src/: batch.rs  lib.rs
crypto/tevone/: Cargo.toml  README.md  sha256sum
crypto/tevone/src/: backend.rs  larger.rs  lib.rs  point.rs  smaller.rs
crypto/transcript/src/: lib.rs
tests/no-std/: Cargo.toml
tests/no-std/src/: lib.rs
