[workspace]
members = [
  "common/std-shims",
  "common/zalloc",

  "crypto/transcript",

  "crypto/ff-group-tests",
  "crypto/dalek-ff-group",
  "crypto/ed448",
  "crypto/tevone",
  "crypto/ciphersuite",

  "crypto/multiexp",

  "crypto/schnorr",
  "crypto/dleq",
  "crypto/dkg",
  "crypto/frost",

  "crypto/bulletproofs-plus",
  "crypto/curve-trees",

  "coins/monero",

  "tests/no-std",
]

# Always compile Monero (and a variety of dependencies) with optimizations due
# to the extensive operations required for Bulletproofs
[profile.dev.package]
subtle = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
pasta_curves = { opt-level = 3 }

ff = { opt-level = 3 }
group = { opt-level = 3 }

crypto-bigint = { opt-level = 3 }
dalek-ff-group = { opt-level = 3 }

multiexp = { opt-level = 3 }

monero-serai = { opt-level = 3 }

[profile.release]
panic = "unwind"
