[package]
name = "bulletproofs-plus"
version = "0.1.0"
description = "bulletproofs+ implementation"
license = "MIT"
repository = "https://github.com/serai-dex/serai/tree/develop/crypto/bulletproofs-plus"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["ciphersuite", "ff", "group"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
rand_core = { version = "0.6", default-features = false }

zeroize = { version = "^1.5", default-features = false, features = ["zeroize_derive"] }
subtle = { version = "^2.4", default-features = false }

transcript = { package = "flexible-transcript", path = "../transcript", version = "0.3" }

multiexp = { path = "../multiexp", default-features = false }
ciphersuite = { path = "../ciphersuite", default-features = false }

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }

transcript = { package = "flexible-transcript", path = "../transcript", features = ["recommended"] }

ciphersuite = { path = "../ciphersuite", features = ["ristretto"] }
