[package]
name = "tevone"
version = "0.1.0"
description = "Implementation of tevador's first efficient cycle candidate"
license = "MIT"
repository = "https://github.com/kayabaNerve/snarks/tree/develop/crypto/tevone"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["ff", "group"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
rustversion = "1"

rand_core = { version = "0.6", default-features = false }

zeroize = { version = "^1.5", default-features = false, features = ["zeroize_derive"] }
subtle = { version = "^2.4", default-features = false }

ff = { version = "0.13", default-features = false, features = ["bits"] }
group = { version = "0.13", default-features = false }

crypto-bigint = { version = "0.5", default-features = false, features = ["zeroize"] }

[dev-dependencies]
hex = "0.4"

rand_core = { version = "0.6", features = ["std"] }

ff-group-tests = { path = "../ff-group-tests" }
