[package]
name = "serai-no-std"
version = "0.1.0"
description = "A crate to test no-std builds of Serai crates work"
license = "MIT"
repository = "https://github.com/kayabaNerve/serai/tree/develop/common/std-shims"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["nostd", "no_std", "alloc", "io"]
edition = "2021"
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
flexible-transcript = { path = "../../crypto/transcript", features = ["recommended", "merlin"] }

dalek-ff-group = { path = "../../crypto/dalek-ff-group" }
tevone = { path = "../../crypto/tevone" }

ciphersuite = { path = "../../crypto/ciphersuite", default-features = false, features = ["alloc", "ed25519", "ristretto"] }

multiexp = { path = "../../crypto/multiexp", default-features = false, features = ["batch"] }
